# Integuru

./: .env.example  README.md  main.ipynb  pyproject.toml
integuru/: agent.py  main.py
integuru/util/: LLM.py  print.py
tests/: test_llm_singleton.py
