[tool.poetry]
name = "integuru"
version = "0.1.0"
description = ""
authors = ["alanalanlu <alanlu1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
click = "^8.1.7"
playwright = "^1.47.0"
networkx = "^3.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
langchain-core = "^1.0.4"
langgraph = "^1.0.3"
langsmith = "^0.4.42"
langchain-google-genai = "^3.0.3"

[tool.poetry.scripts]
integuru = "integuru.__main__:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
